[package]
name = "keycloak-management-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["tokio", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keycloak = { path = "../keycloak", version = "26.3.100" }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# MCP support
rmcp = { path = "../rust-sdk/crates/rmcp", features = ["server", "client", "macros", "transport-streamable-http-server", "transport-streamable-http-client", "schemars", "reqwest-tls-no-provider"] }
rmcp-macros = { path = "../rust-sdk/crates/rmcp-macros" }

[lib]
name = "keycloak_management_api"
path = "src/lib.rs"

[[bin]]
name = "keycloak-mcp-server"
path = "src/mcp_server.rs"

[[bin]]
name = "keycloak-api-server"
path = "src/main.rs"

[[bin]]
name = "mcp-client-example"
path = "examples/mcp_client.rs"